powerpc/85xx: Cleanup PME config support
Removed PME from board specific support and added it to generic cpu default
config file.

Signed-off-by: Jeffrey Ladouceur <Jeffrey.Ladouceur@freescale.com>
Signed-off-by: Andy Fleming <afleming@freescale.com>

--- a/drivers/staging/fsl_pme2/Kconfig
+++ b/drivers/staging/fsl_pme2/Kconfig
@@ -1,7 +1,6 @@
 config FSL_PME2
 	bool "Freescale Datapath Pattern Matcher support"
-	depends on HAS_FSL_PME && FSL_QMAN
-	default y
+	depends on FSL_QMAN
 
 menu "Freescale Datapath PME options"
 	depends on FSL_PME2
