--- a/arch/powerpc/boot/dts/fsl/t4240si-post.dtsi
+++ b/arch/powerpc/boot/dts/fsl/t4240si-post.dtsi
@@ -320,7 +320,13 @@
 			phy_type = "utmi";
 		};
 /include/ "qoriq-sata2-0.dtsi"
+	sata0: sata@220000 {
+		compatible = "fsl,t4240-rev1.0-sata", "fsl,pq-sata-v2";
+	};
 /include/ "qoriq-sata2-1.dtsi"
+	sata1: sata@221000 {
+		compatible = "fsl,t4240-rev1.0-sata", "fsl,pq-sata-v2";
+	};
 /include/ "qoriq-dce-0.dtsi"
 /include/ "qoriq-pme-0.dtsi"
 
