--- a/arch/powerpc/boot/dts/b4860qds.dts
+++ b/arch/powerpc/boot/dts/b4860qds.dts
@@ -42,12 +42,14 @@
 	interrupt-parent = <&mpic>;
 
 	aliases{
-		ethernet0 = &enet0;
-		ethernet1 = &enet1;
-		ethernet2 = &enet2;
-		ethernet3 = &enet3;
-		ethernet4 = &enet4;
-		ethernet5 = &enet5;
+		ethernet0 = &fm1mac1;
+		ethernet1 = &fm1mac2;
+		ethernet2 = &fm1mac3;
+		ethernet3 = &fm1mac4;
+		ethernet4 = &fm1mac5;
+		ethernet5 = &fm1mac6;
+		ethernet6 = &fm1mac9;
+		ethernet7 = &fm1mac10;
 	};
 
 	ifc: localbus@ffe124000 {
@@ -163,29 +165,49 @@
 		};
 
 		fman0: fman@400000 {
-			enet0: ethernet@e0000 {
+			fm1mac1: ethernet@e0000 {
 				fixed-link = <1 1 1000 0 0 >;
 				phy-connection-type = "sgmii";
 			};
-			enet1: ethernet@e2000 {
+			fm1mac2: ethernet@e2000 {
 				fixed-link = <2 1 1000 0 0 >;
 				phy-connection-type = "sgmii";
 			};
-			enet2: ethernet@e4000 {
+			fm1mac3: ethernet@e4000 {
 				fixed-link = <3 1 1000 0 0 >;
 				phy-connection-type = "sgmii";
 			};
-			enet3: ethernet@e6000 {
+			fm1mac4: ethernet@e6000 {
 				fixed-link = <4 1 1000 0 0 >;
 				phy-connection-type = "sgmii";
 			};
-			enet4: ethernet@e8000 {
+			fm1mac5: ethernet@e8000 {
 				fixed-link = <5 1 1000 0 0 >;
 				phy-connection-type = "sgmii";
 			};
-			enet5: ethernet@ea000 {
+			fm1mac6: ethernet@ea000 {
 				fixed-link = <6 1 1000 0 0 >;
 				phy-connection-type = "sgmii";
+			};
+			fm1mac9: ethernet@f0000 { /* FM1@TGEC2 */
+				phy-handle = <&b4860xmdio1>;
+				phy-connection-type = "xgmii";
+			};
+			fm1mac10: ethernet@f2000 { /* FM1@TGEC1 */
+				phy-handle = <&b4860xmdio2>;
+				phy-connection-type = "xgmii";
+			};
+
+			xmdio0: mdio@fd000 {
+				/* For 10g interfaces */
+				b4860xmdio1: xaui-phy@slot1 {
+					compatible = "ethernet-phy-ieee802.3-c45";
+					reg = <0x7>; /* default switch setting on slot1 of AMC2PEX */
+				};
+				b4860xmdio2: xaui-phy@slot2 {
+					compatible = "ethernet-phy-ieee802.3-c45";
+					reg = <0x6>; /* default switch setting on slot1 of AMC2PEX */
+				};
 			};
 		};
 	};
@@ -220,27 +242,35 @@
 		compatible = "fsl,b4860-dpaa", "fsl,dpaa";
 		ethernet@0 {
 			compatible = "fsl,b4860-dpa-ethernet", "fsl,dpa-ethernet";
-			fsl,fman-mac = <&enet0>;
+			fsl,fman-mac = <&fm1mac1>;
 		};
 		ethernet@1 {
 			compatible = "fsl,b4860-dpa-ethernet", "fsl,dpa-ethernet";
-			fsl,fman-mac = <&enet1>;
+			fsl,fman-mac = <&fm1mac2>;
 		};
 		ethernet@2 {
 			compatible = "fsl,b4860-dpa-ethernet", "fsl,dpa-ethernet";
-			fsl,fman-mac = <&enet2>;
+			fsl,fman-mac = <&fm1mac3>;
 		};
 		ethernet@3 {
 			compatible = "fsl,b4860-dpa-ethernet", "fsl,dpa-ethernet";
-			fsl,fman-mac = <&enet3>;
+			fsl,fman-mac = <&fm1mac4>;
 		};
 		ethernet@4 {
 			compatible = "fsl,b4860-dpa-ethernet", "fsl,dpa-ethernet";
-			fsl,fman-mac = <&enet4>;
+			fsl,fman-mac = <&fm1mac5>;
 		};
 		ethernet@5 {
 			compatible = "fsl,b4860-dpa-ethernet", "fsl,dpa-ethernet";
-			fsl,fman-mac = <&enet5>;
+			fsl,fman-mac = <&fm1mac6>;
+		};
+		ethernet@6 {
+			compatible = "fsl,b4860-dpa-ethernet", "fsl,dpa-ethernet";
+			fsl,fman-mac = <&fm1mac9>;
+		};
+		ethernet@7 {
+			compatible = "fsl,b4860-dpa-ethernet", "fsl,dpa-ethernet";
+			fsl,fman-mac = <&fm1mac10>;
 		};
 	};
 };
