qman: Increase default size of PFDR pool
In (not so) pathological scenarios where cores are transmitting small
datagrams at a very fast pace, QMan's PFDR pool may deplete and a "PFDR
low" interrupt is raised, shortly followed by an "enqueues blocked
interrupt".
Because the combination of the two may lead to a system-wide deadlock
(all entities - cores, FMan - remaining stuck while trying to
enqueue to a PFDR-depleted QMan), the worst-case scenario may entail a
system reboot.

As it turns out, increasing the default PFDR pool size from 16M to 32M
suffices to work around the described problem, at least on a 8-core
P4080 (on which the problem was reported).

While we're at it, moved the hard-coded DEFAULT_PFDR_SZ value to the
Kconfig.

Signed-off-by: Bogdan Hamciuc <bogdan.hamciuc@freescale.com>
Signed-off-by: Andy Fleming <afleming@freescale.com>

--- a/drivers/staging/fsl_qbman/Kconfig
+++ b/drivers/staging/fsl_qbman/Kconfig
@@ -171,6 +171,13 @@ config FSL_QMAN_FQD_SZ
 	  ex: 10 => PAGE_SIZE * (2^10)
 	  Note: Default device-trees now require minimum Kconfig setting of 10.
 
+config FSL_QMAN_PFDR_SZ
+	int "size of the PFDR pool"
+	default 13
+	---help---
+	  This is the size of the PFDR pool defined as: PAGE_SIZE * (2^value)
+	  ex: 13 => PAGE_SIZE * (2^13)
+
 # Corenet initiator settings. Stash request queues are 4-deep to match cores'
 # ability to snart. Stash priority is 3, other priorities are 2.
 config FSL_QMAN_CI_SCHED_CFG_SRCCIV
